config/base/pod.yaml
apiVersion: v1
kind: Deployment

metadata:
  name: nginx-deployment
  namespace: default

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
        - name: redis
          image: redis:latest
          resources:
            requests:
              cpu: 250m
              memory: 128Mi

      nodeSelector:
        gpu: nvidia

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: gpu
                    operator: In
                    values:
                      - nvidia
                      - amd
